2017, Oct 31 + fixing header, frames, barres, spacings

--- a/src/assets/scss/template/_template.scss
+++ b/src/assets/scss/template/_template.scss
@@ -99,10 +99,6 @@ hr {
   border-style: dotted;
   border-bottom: none !important;
   border-color: #024 !important;
-  max-width: 96% !important;
-}
-
-hr.shorter {
   max-width: 64% !important;
 }
 
